--- a/PluginSystem/PluginSystem.csproj
+++ b/PluginSystem/PluginSystem.csproj
@@ -53,6 +53,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialNode.cs" />
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ModuleSettings.resx">
